syntax = "proto3";
package prismfinance.prismcore.icstaking;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/prism-finance/prism-core/x/icstaking/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  StakingParams staking_params = 1 [(gogoproto.nullable) = false];
}

message StakingParams {
  FeeRatios fee_ratios = 1 [(gogoproto.nullable) = false];

  // in hours
  uint64 delegation_interval = 2;
  // in hours
  uint64 undelegation_interval = 3;

  google.protobuf.Duration ibc_transfer_timeout = 4 [(gogoproto.stdduration) = true];
  google.protobuf.Duration ica_timeout = 5 [(gogoproto.stdduration) = true];

  int32 max_delegation_msgs = 6;
  int32 max_undelegation_msgs = 7;
  int32 max_redelegation_msgs = 8;

  string rebalance_threshold = 9 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
  ];
  string min_rebalance_amount = 10 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int"
  ];
  google.protobuf.Duration min_rebalance_interval = 11 [(gogoproto.stdduration) = true];
}

message FeeRatios {
  string yield = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
  ];
  string staking = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
  ];
  string unstaking = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
  ];
  string instant_unstaking = 4 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec"
  ];
}
